2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/events/custom_events.php,
	godmode/massive/massive_enable_disable_alerts.php,
	godmode/massive/massive_edit_agents.php,
	godmode/massive/massive_delete_modules.php,
	godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_delete_profiles.php,
	godmode/massive/massive_delete_alerts.php,
	godmode/groups/modu_group_list.php, godmode/groups/group_list.php,
	godmode/reporting/graph_builder.php, godmode/reporting/graphs.php,
	godmode/alerts/alert_templates.php,
	godmode/alerts/configure_alert_action.php, include/functions_ui.php,
	include/functions_graph.php: improved the source code.

2013-04-25  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	  pandoradb.postgreSQL.sql,
	  pandoradb.oracle.sql: Removed an unused column from tagente_datos_inc.
	  Fixes bug #3611681.

	* godmode/servers/modificar_server.php: Fixed a comment.

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora.js: set the title for the large
	modules.
	
	Fixes: #3609509

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/agents_alerts.php, extensions/snmp_explorer.php,
	extensions/insert_data.php, extensions/net_tools.php,
	extensions/resource_exportation.php, extensions/system_info.php,
	extensions/pandora_logs.php, extensions/agents_modules.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/servers/manage_recontask_form.php,
	godmode/setup/gis_step_2.php,
	godmode/massive/massive_standby_alerts.php,
	godmode/massive/massive_operations.php,
	godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_add_alerts.php,
	godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_delete_action_alerts.php,
	operation/users/user_edit.php, operation/events/events_list.php,